@@ -1,3 +1,4 @@
+1/23/14 center controls under beaker, because it looks better and we have room for i18n now
 1/23/14 move linear graph to Solutions screen
 1/23/14 rounded corners on pH probe tip
 1/23/14 add a probe to pH meter that extends to bottom of beaker
